src/graph/snapshots/stakk__graph__output__tests__json_full_snapshot.snap
---
source: src/graph/output.rs
expression: "render_json(&data, JsonProjection::Full)"
---
{
  "schema_version": 3,
  "default_branch": "main",
  "remotes": [
    {
      "name": "origin",
      "url": "git@github.com:glennib/stakk.git",
      "host": "github.com",
      "repo": "glennib/stakk"
    },
    {
      "name": "mirror",
      "url": "https://gitlab.com/x/y.git",
      "host": "gitlab.com",
      "repo": "x/y"
    }
  ],
  "excluded_bookmarks": [
    "merged-work"
  ],
  "excluded_heads": [
    {
      "change_id": "yqosqzytrlpu",
      "short_change_id": "yqos"
    }
  ],
  "stacks": [
    {
      "segments": [
        {
          "bookmarks": [
            {
              "name": "base",
              "remote_state": "synced"
            }
          ],
          "commits": [
            {
              "change_id": "mnrqxtvo",
              "short_change_id": "mnrq",
              "commit_id": "c_mnrqxtvo",
              "title": "add base",
              "description": "add base",
              "author": {
                "name": "Test",
                "email": "test@test.com",
                "timestamp": "2026-01-01T00:00:00Z"
              },
              "committer_timestamp": "2026-01-01T00:00:00Z",
              "files": [
                "src/mnrqxtvo.rs"
              ],
              "is_immutable": false,
              "local_bookmark_names": [],
              "is_boundary": false,
              "is_leaf": false
            },
            {
              "change_id": "qzvsmyxk",
              "short_change_id": "qzvs",
              "commit_id": "c_qzvsmyxk",
              "title": "extend base",
              "description": "extend base",
              "author": {
                "name": "Test",
                "email": "test@test.com",
                "timestamp": "2026-01-01T00:00:00Z"
              },
              "committer_timestamp": "2026-01-01T00:00:00Z",
              "files": [
                "src/qzvsmyxk.rs"
              ],
              "is_immutable": false,
              "local_bookmark_names": [
                "base"
              ],
              "is_boundary": true,
              "is_leaf": false
            }
          ]
        },
        {
          "bookmarks": [
            {
              "name": "feat-a",
              "remote_state": "unpushed"
            }
          ],
          "commits": [
            {
              "change_id": "ptszrkwu",
              "short_change_id": "ptsz",
              "commit_id": "c_ptszrkwu",
              "title": "feat a work",
              "description": "feat a work",
              "author": {
                "name": "Test",
                "email": "test@test.com",
                "timestamp": "2026-01-01T00:00:00Z"
              },
              "committer_timestamp": "2026-03-01T00:00:00Z",
              "files": [
                "src/ptszrkwu.rs"
              ],
              "is_immutable": false,
              "local_bookmark_names": [],
              "is_boundary": false,
              "is_leaf": false
            },
            {
              "change_id": "wmtkoylq",
              "short_change_id": "wmtk",
              "commit_id": "c_wmtkoylq",
              "title": "",
              "description": "",
              "author": {
                "name": "Test",
                "email": "test@test.com",
                "timestamp": "2026-01-01T00:00:00Z"
              },
              "committer_timestamp": "2026-03-01T00:00:00Z",
              "files": [
                "src/wmtkoylq.rs"
              ],
              "is_immutable": false,
              "local_bookmark_names": [
                "feat-a"
              ],
              "is_boundary": true,
              "is_leaf": true
            }
          ]
        }
      ]
    },
    {
      "segments": [
        {
          "bookmarks": [
            {
              "name": "base",
              "remote_state": "synced"
            }
          ],
          "commits": [
            {
              "change_id": "mnrqxtvo",
              "short_change_id": "mnrq",
              "commit_id": "c_mnrqxtvo",
              "title": "add base",
              "description": "add base",
              "author": {
                "name": "Test",
                "email": "test@test.com",
                "timestamp": "2026-01-01T00:00:00Z"
              },
              "committer_timestamp": "2026-01-01T00:00:00Z",
              "files": [
                "src/mnrqxtvo.rs"
              ],
              "is_immutable": false,
              "local_bookmark_names": [],
              "is_boundary": false,
              "is_leaf": false
            },
            {
              "change_id": "qzvsmyxk",
              "short_change_id": "qzvs",
              "commit_id": "c_qzvsmyxk",
              "title": "extend base",
              "description": "extend base",
              "author": {
                "name": "Test",
                "email": "test@test.com",
                "timestamp": "2026-01-01T00:00:00Z"
              },
              "committer_timestamp": "2026-01-01T00:00:00Z",
              "files": [
                "src/qzvsmyxk.rs"
              ],
              "is_immutable": false,
              "local_bookmark_names": [
                "base"
              ],
              "is_boundary": true,
              "is_leaf": false
            }
          ]
        },
        {
          "bookmarks": [
            {
              "name": "feat-b",
              "remote_state": "diverged"
            }
          ],
          "commits": [
            {
              "change_id": "rlkvnnup",
              "short_change_id": "rlkv",
              "commit_id": "c_rlkvnnup",
              "title": "feat b work",
              "description": "feat b work\n\nThe body explains why.\nIt spans two lines.",
              "author": {
                "name": "Test",
                "email": "test@test.com",
                "timestamp": "2026-01-01T00:00:00Z"
              },
              "committer_timestamp": "2026-02-01T00:00:00Z",
              "files": [
                "src/rlkvnnup.rs"
              ],
              "is_immutable": true,
              "local_bookmark_names": [
                "feat-b",
                "old-mark"
              ],
              "is_boundary": true,
              "is_leaf": true
            }
          ]
        }
      ]
    }
  ]
}
