src/graph/snapshots/stakk__graph__output__tests__pretty_graph_snapshot.snap
---
source: src/graph/output.rs
expression: "render_pretty(&data, false)"
---
Default branch: main
Remote: origin git@github.com:glennib/stakk.git (glennib/stakk)
Remote: mirror https://gitlab.com/x/y.git (x/y)

 ○  wmtk  feat-a  (no description set)
 ○  ptsz  "feat a work"
 │ ○  rlkv  feat-b  "feat b work"  (immutable — bookmark old-mark excluded by --bookmarks-revset)
 ├─╯
 ○  qzvs  base  "extend base"
 ○  mnrq  "add base"
 ◆  trunk

(merged-work excluded due to merge commits)
(unbookmarked head(s) yqos excluded due to merge commits)
